Поправил цвет текста в полях ввода в контактной форме

--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -50,7 +50,7 @@
     font-weight: 400;
     font-size: 17px;
     line-height: 129%;
-    color: rgba(69, 71, 71, 0.35);
+    color: var(--black);
     display: block;
     padding: 20px 25px;
     padding-left: 60px;
