--- a/css/main.css
+++ b/css/main.css
@@ -1305,7 +1305,7 @@ textarea {
   font-weight: 400;
   font-size: 17px;
   line-height: 129%;
-  color: rgba(69, 71, 71, 0.35);
+  color: var(--black);
   display: block;
   padding: 20px 25px;
   padding-left: 60px;
