поправил лейбл на лице

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@
 @import "./blocks/menu-button";
 @import "./blocks/navigation.scss";
 @import "./blocks/section-label";
+@import "./blocks/empty-label";
 @import "./blocks/card-item";
 @import "./blocks/service-card";
 @import "./blocks/social-list";
