--- a/css/main.css
+++ b/css/main.css
@@ -971,6 +971,33 @@ textarea {
   }
 }
 
+.empty-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 117px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 157%;
+  height: 42px;
+  padding: 6px 20px;
+  color: rgba(69, 71, 71, 0.15);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  background-image: url(../img/call-to-action/tag.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (max-width: 767px) {
+  .empty-label {
+    display: none;
+  }
+}
+
 .card-item {
   border-radius: 20px;
   overflow: hidden;
@@ -1559,7 +1586,8 @@ textarea {
 .section .wrapper {
   position: relative;
 }
-.section .section-label {
+.section .section-label,
+.section .empty-label {
   position: absolute;
   top: 0;
   left: 0;
@@ -2110,12 +2138,13 @@ textarea {
   border-radius: 20px;
   background-color: #fff;
   color: rgba(69, 71, 71, 0.8);
-  background-image: url(../img/call-to-action/bg.jpg);
+  background-image: url(../img/call-to-action/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 130px;
   padding-bottom: 100px;
   margin-bottom: 20px;
+  background-position: left top;
 }
 .call-to-action .title {
   color: #454747;
@@ -2123,9 +2152,10 @@ textarea {
 }
 .call-to-action .section-label {
   -webkit-backdrop-filter: blur(51px);
-          backdrop-filter: blur(51px);
-  color: rgb(48, 48, 48);
-  border: 1px solid rgb(48, 48, 48);
+  backdrop-filter: blur(51px);
+  color: rgba(48, 48, 48, 0.65);
+  border: 1px solid rgba(48, 48, 48, 0.31);
+  background-color: rgba(255, 255, 255, 0.5411764706);
 }
 .call-to-action .section__header-col {
   grid-column: 6/13;
