--- a/css/main.css
+++ b/css/main.css
@@ -1655,7 +1655,7 @@ textarea {
   pointer-events: none;
 }
 .mobile-nav .wrapper {
-  height: 100%;
+  max-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1667,6 +1667,9 @@ textarea {
 .mobile-nav__list {
   margin-bottom: 32px;
   position: relative;
+}
+.mobile-nav__body {
+  margin-bottom: 48px;
 }
 .mobile-nav__footer {
   margin-top: auto;
