--- a/css/sections/_mobile-nav.scss
+++ b/css/sections/_mobile-nav.scss
@@ -19,13 +19,16 @@
   opacity: 0;
   pointer-events: none;
   .wrapper {
-    height: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
   }
   &__list {
     margin-bottom: 32px;
     position: relative;
+  }
+  &__body {
+    margin-bottom: 48px;
   }
   &__footer {
     margin-top: auto;
