--- a/css/blocks/_menu-button.scss
+++ b/css/blocks/_menu-button.scss
@@ -9,38 +9,56 @@
   height: 45px;
   backdrop-filter: blur(35px);
   background: rgba(0, 0, 0, 0.05);
-  span,
-  span::after,
-  span::before {
-    flex-shrink: 0;
-    position: absolute;
-    width: 24px;
-    height: 2px;
-    // border-radius: 4px;
-    background-color: var(--white);
-    z-index: 2;
+
+  .icon-on {
+    display: none;
+    width: 15px;
+    height: 15px;
+    align-items: center;
+    justify-content: center;
   }
 
-  span::after,
-  span::before {
-    content: "";
-    display: block;
-    transition: 0.3s;
+  .icon-off {
+    width: 15px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  span::before {
-    -webkit-transform: translateY(-6px);
-    transform: translateY(-6px);
-    width: 18px;
-  }
+  // span,
+  // span::after,
+  // span::before {
+  //   flex-shrink: 0;
+  //   position: absolute;
+  //   width: 24px;
+  //   height: 2px;
+  //   // border-radius: 4px;
+  //   background-color: var(--white);
+  //   z-index: 2;
+  // }
 
-  span::after {
-    -webkit-transform: translateY(6px);
-    transform: translateY(6px);
-    width: 12px;
-  }
+  // span::after,
+  // span::before {
+  //   content: "";
+  //   display: block;
+  //   transition: 0.3s;
+  // }
+
+  // span::before {
+  //   -webkit-transform: translateY(-6px);
+  //   transform: translateY(-6px);
+  //   width: 18px;
+  // }
+
+  // span::after {
+  //   -webkit-transform: translateY(6px);
+  //   transform: translateY(6px);
+  //   width: 12px;
+  // }
 
   &:hover {
-    background-color: #A32B29;;
+    background-color: #A32B29;
+    ;
   }
 }
