--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@
 
 // blocks
 @import "./blocks/wrapper";
+@import "./blocks/container";
 @import "./blocks/title";
 @import "./blocks/button";
 @import "./blocks/logo";
