--- a/css/sections/_call-to-action.scss
+++ b/css/sections/_call-to-action.scss
@@ -46,6 +46,18 @@
     padding-top: 65px;
     padding-bottom: 345px;
     background-position: bottom center;
+    position: relative;
+    &::before {
+      content: "";
+      display: block;
+      // width: 100%;
+      height: 5px;
+      background-color: #000000;
+      position: absolute;
+      top: -5px;
+      left: -20px;
+      right: -20px;
+    }
 
     .form {
       margin-top: 28px;
