--- a/css/sections/_footer.scss
+++ b/css/sections/_footer.scss
@@ -13,6 +13,8 @@
   line-height: 129%;
   color: rgba(245, 245, 245, 0.25);
 
+
+
   &__grid {
     display: grid;
     gap: 14px 32px;
@@ -73,6 +75,10 @@
     line-height: 129%;
     color: rgba(245, 245, 245, 0.25);
     width: 100%;
+
+    a {
+      text-decoration: underline;
+    }
   }
   &__copy {
     margin: 0;
@@ -114,5 +120,10 @@
     .section__body {
       margin-bottom: 90px;
     }
+    .heart--mod {
+      margin-bottom: -12px;
+      margin-inline: 0;
+      scale: 0.7;
+  }
   }
 }
