--- a/css/sections/_reviews.scss
+++ b/css/sections/_reviews.scss
@@ -192,6 +192,7 @@
     padding-top: 55px;
     max-width: 100%;
     overflow-x: hidden;
+    font-size: 15px;
     .reviews__slide {
       // display: block;
       grid-template-columns: repeat(1, 1fr);
