--- a/css/sections/_modal.scss
+++ b/css/sections/_modal.scss
@@ -69,11 +69,11 @@
       }
     }
 
-    &:hover,
-    &:active,
-    &:focus {
-      color: var(--modal-accent);
-    }
+    // &:hover,
+    // &:active,
+    // &:focus {
+    //   color: var(--modal-accent);
+    // }
   }
 
   .form__info {
